refactor: consolidate duplicate page container and annotation utilities